# ostis-metasystem

./: .dockerignore  .env.example  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING.MIT  Dockerfile  LICENSE  README.md  codecov.yml  conanfile.py  dependencies.cmake  docker-compose.yaml  ellipsis.yaml  index.html  main.tex  metasystem.gwf  mkdocs.yml  ostis-metasystem.ini  repo.path
platform-dependent-components/problem-solver/cxx/: CMakeLists.txt
platform-dependent-components/problem-solver/cxx/commonModule/: CMakeLists.txt
platform-dependent-components/problem-solver/cxx/commonModule/utils/: SetUtils.cpp  SetUtils.hpp
platform-dependent-components/problem-solver/cxx/exampleModule/: CMakeLists.txt  ExampleModule.cpp  ExampleModule.hpp
platform-dependent-components/problem-solver/cxx/exampleModule/agent/: ExampleAgent.cpp  ExampleAgent.hpp
platform-dependent-components/problem-solver/cxx/exampleModule/keynodes/: ExampleKeynodes.cpp  ExampleKeynodes.hpp
platform-dependent-components/problem-solver/cxx/generate-response-module/: CMakeLists.txt  GenerateResponseModule.cpp  GenerateResponseModule.hpp  generate_response_module.cpp  generate_response_module.hpp
platform-dependent-components/problem-solver/cxx/generate-response-module/agent/: GenerateResponseAgent.cpp  GenerateResponseAgent.hpp  generate-response-agent.cpp  generate-response-agent.hpp
platform-dependent-components/problem-solver/cxx/generate-response-module/constants/: Constants.cpp  Constants.hpp  generate_response_constants.cpp  generate_response_constants.hpp
platform-dependent-components/problem-solver/cxx/generate-response-module/keynodes/: Keynodes.cpp  Keynodes.hpp  generate_response_keynodes.hpp
platform-dependent-components/problem-solver/cxx/generate-response-module/test/: tests.cmake
platform-dependent-components/problem-solver/cxx/generateResponseModule/agent/: GenerateResponseAgent.cpp  GenerateResponseAgent.hpp
platform-dependent-components/problem-solver/cxx/generateResponseModule/keynodes/: Keynodes.cpp  Keynodes.hpp
platform-dependent-components/problem-solver/cxx/generateResponseModule/test/: tests.cmake
platform-dependent-components/problem-solver/cxx/identifiers-module/: CMakeLists.txt  identifiers_module.cpp  identifiers_module.hpp
platform-dependent-components/problem-solver/cxx/identifiers-module/agent/: translate_main_system_idtfs_from_sc_to_file_agent.cpp  translate_main_system_idtfs_from_sc_to_file_agent.hpp
platform-dependent-components/problem-solver/cxx/identifiers-module/keynodes/: identifiers_keynodes.cpp  identifiers_keynodes.hpp
platform-dependent-components/problem-solver/cxx/identifiers-module/test/: CMakeLists.txt  tests.cmake
platform-dependent-components/problem-solver/cxx/identifiersModule/: CMakeLists.txt  IdentifiersModule.cpp  IdentifiersModule.hpp  identifiers.txt
platform-dependent-components/problem-solver/cxx/identifiersModule/agent/: FindIdentifiersAgent.cpp  FindIdentifiersAgent.hpp  TranslateMainSystemIdtfsFromScToFileAgent.cpp  TranslateMainSystemIdtfsFromScToFileAgent.hpp
platform-dependent-components/problem-solver/cxx/identifiersModule/keynodes/: IdentifiersKeynodes.cpp  IdentifiersKeynodes.hpp
platform-dependent-components/problem-solver/cxx/identifiersModule/test/: tests.cmake
platform-dependent-components/problem-solver/cxx/language-recognition-module/: CMakeLists.txt  language_recognition_module.cpp  language_recognition_module.hpp
platform-dependent-components/problem-solver/cxx/language-recognition-module/agent/: language-recognition-agent.cpp  language-recognition-agent.hpp
platform-dependent-components/problem-solver/cxx/language-recognition-module/keynodes/: language_recognition_keynodes.hpp
platform-dependent-components/problem-solver/cxx/language-recognition-module/test/: tests.cmake
platform-dependent-components/problem-solver/cxx/local-common-module/: CMakeLists.txt  LocalCommonModule.cpp  LocalCommonModule.hpp
platform-dependent-components/problem-solver/cxx/local-common-module/keynodes/: LocalKeynodes.cpp  LocalKeynodes.hpp
platform-dependent-components/problem-solver/cxx/message-classification-module/: CMakeLists.txt  MessageClassificationModule.cpp  message_classification_module.cpp  message_classification_module.hpp
platform-dependent-components/problem-solver/cxx/message-classification-module/agent/: MessageTopicClassificationAgent.cpp  message-topic-classification-agent.cpp  (+1 more)
platform-dependent-components/problem-solver/cxx/message-reply-module/: CMakeLists.txt  MessageReplyModule.cpp  MessageReplyModule.hpp  message_reply_module.cpp  message_reply_module.hpp
platform-dependent-components/problem-solver/cxx/search-answer-module/: CMakeLists.txt  search-answer-module.cpp  search_answer_module.cpp  search_answer_module.hpp
platform-dependent-components/problem-solver/cxx/sections-module/: CMakeLists.txt  subject_domain_module.cpp  subject_domain_module.hpp
platform-dependent-components/problem-solver/cxx/sspace-search-module/: CMakeLists.txt  search.c  search_agents.h  search_keynodes.c  search_keynodes.h  search_utils.c  search_utils.h
platform-dependent-components/problem-solver/cxx/structured-representation-generation-module/: CMakeLists.txt  StructuredRepresentationGenerationModule.cpp  StructuredRepresentationGenerationModule.hpp  structured_representation_generation_module.cpp  structured_representation_generation_module.hpp
platform-dependent-components/problem-solver/cxx/subject-domain-module/: CMakeLists.txt  subject_domain_module.cpp  subject_domain_module.hpp
platform-dependent-components/problem-solver/cxx/subjectDomainModule/: CMakeLists.txt  SubjectDomainModule.cpp  SubjectDomainModule.hpp
platform-dependent-components/problem-solver/cxx/utils-module/: CMakeLists.txt  utils.c  utils.h  utils_defines.h  utils_keynodes.c  utils_keynodes.h  utils_utils.c  utils_utils.h
platform-dependent-components/problem-solver/cxx/verification-module/: CMakeLists.txt  verification_module.cpp  verification_module.hpp
(+635 files in other folders)
