add_subdirectory(identifiers-module)
add_subdirectory(sections-module)
add_subdirectory(verification-module)
add_subdirectory(generate-response-module)
add_subdirectory(language-recognition-module)
add_subdirectory(local-common-module)
add_subdirectory(message-classification-module)
add_subdirectory(message-reply-module)
add_subdirectory(search-answer-module)
